fix(crew): Fix crew carousel, with the indication of position and overflow

--- a/src/routes/crewPage/crewPage.module.css
+++ b/src/routes/crewPage/crewPage.module.css
@@ -30,13 +30,14 @@
     @media (--min-desktop) {
         position: absolute;
         display: grid;
-        grid-template-columns: 1.1fr 1fr;
+        grid-template-columns: 4.5fr 1fr;
         grid-template-rows: 3fr 1fr;
         margin: 0;
         gap: 0;
         margin-right: 5%;
         column-gap: 20px;
         align-content: flex-start;
+        justify-content: space-between;
     }
 }
 
@@ -45,6 +46,7 @@
     border-bottom: 1px solid var(--color-border);
     grid-column: 2/3;
     grid-row: 1/3;
+    aspect-ratio: 1;
 
     @media (--min-desktop) {
         border: none;
